test/libsolidity/syntaxTests/parsing/payable_accessor.sol
contract test {
	uint payable x;
}
// ----
// ParserError: (22-22): Expected identifier, got 'Payable'
